# lava-flow

./: CMakeLists.txt  README.md  convertTovtk.sh  glisX_input-lava-pouring.json  glisX_input-lava-travelling-vortex.json  glisX_input-lava-wb.json  glisX_input_lava.json
scripts/: von_Neumann.nb
scripts/Mathematica/: LW_proc.nb
scripts/m/: README  export.m  fpl_vtk_write_field_octree.m  fpl_vtk_write_field_octree_binary.m  make_quadtree_connectivity.m
scripts/matlab_1d/: README.md  lava_flow_1d.m
source/: Taylor_Galerkin_lava.cpp  Taylor_Galerkin_lava.h  lava_macro_input.h  main_lava.cpp
